@@ -21,3 +21,10 @@ To get started with the Hero-Creator, ensure you have Java and JavaFX set up on 
    git clone https://github.com/peterbucci/Hero-Creator.git
    cd Hero-Creator
    ```
+2. **Include JavaFX Library**
+
+Make sure to include the path to your JavaFX lib folder if running from the command line.
+
+```bash
+java --module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml -cp bin Main
+```
